--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="card border-0 mx-auto btn" style="width: 18rem;">
             <img src="/assets/produtos-paes.png" class="card-img-top" alt="Pães e focaccias em um cesto de linho">
             <div class="card-body text-center">
-              <h3 class="card-text fw-bold">Cafés especiais</h3>
+              <h3 class="card-text fw-bold">Pães e Focaccias</h3>
             </div>
           </div>
         </div>
@@ -164,7 +164,7 @@
           <div class="card border-0 mx-auto btn" style="width: 18rem;">
             <img src="/assets/produtos-doces.png" class="card-img-top" alt="Bolo em um píres branco">
             <div class="card-body text-center">
-              <h3 class="card-text fw-bold">Cafés especiais</h3>
+              <h3 class="card-text fw-bold">Doces</h3>
             </div>
           </div>
         </div>
@@ -173,7 +173,7 @@
           <div class="card border-0 mx-auto btn" style="width: 18rem;">
             <img src="/assets/produtos-salgados.png" class="card-img-top" alt="Torta salgada em tábua de madeira">
             <div class="card-body text-center">
-              <h3 class="card-text fw-bold">Cafés especiais</h3>
+              <h3 class="card-text fw-bold">Salgados</h3>
             </div>
           </div>
         </div>
